# schedule-viewer

./: .env.development  .env.development.local  .env.example  .env.preview  .env.production  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  HARMONIZATION_SUMMARY.md  MetricAid API Documentation.htm  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  wrangler.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adr.md  bug_fix.md  feature_request.md  idea.md
MetricAid API Documentation_files/: api_data.js  api_project.js  diff_match_patch.min.js  es.js  handlebars_helper.js  index.js  it.js  polyfill.js  prettify.css  prettify.js  semver.min.js  send_sample_request.js  send_sample_request_utils.js  style.css
claudedocs/: api-structure-analysis.md
docs/: ARCHITECTURE.md  GIT_CRYPT_SETUP.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_SETUP.md  SAME_ORIGIN_DEPLOYMENT.md  SENSITIVE_FILES.md  access-gate.md  deployment-options.md  favicon-cache-busting.md  project-instructions.md  telemetry-dashboard-handoff.md  telemetry-supabase-migration.md  telemetry.md  ui-rationalization-top-bar.md  worker-password-gate.md
docs/API/: README.md  server-cache-status.md
docs/adr/: 0001-foundation-platform.md  (+3 more)
memory/: MEMORY.md
public/: _routes.json
scripts/: README.md  explore-api.js  inspect-api.js  test-worker.sh  update_siamo_numeri.py  upload-config-to-r2.sh
worker/: .dev.vars  .dev.vars.example  .env.development  .env.development.local  .env.example  .gitignore  Cargo.toml  wrangler.toml
worker/src/: config.rs  lib.rs  utils.rs
(+117 files in other folders)
