[package]
name = "schedule-viewer-worker"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
once_cell = "1.18"
constant_time_eq = "0.3"
uuid = { version = "1.10", features = ["v4", "js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
